--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -21,4 +21,4 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Test the execution of the Playbook but don't make any changes
-      run: docker run --rw ignw/dc_2020_aci_appliance_server:latest ansible-playbook -i inventory aci_appliance_server.yml -v --check --diff
+      run: docker run --rm ignw/dc_2020_aci_appliance_server:latest ansible-playbook -i inventory aci_appliance_server.yml -v --check --diff
