--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -29,4 +29,4 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Run the playbook
-      docker run --rm ignw/dc_2020_aci_appliance_server:latest ansible-playbook -i inventory aci_appliance_server.yml -v
+      run: docker run --rm ignw/dc_2020_aci_appliance_server:latest ansible-playbook -i inventory aci_appliance_server.yml -v
