--- a/gui/ui.yml
+++ b/gui/ui.yml
@@ -14,6 +14,7 @@ leaf_a:
 leaf_a_interface_a:
     type: dropdown
     options:
+        - "NULL"
         {% for x in range(20) %}
         - {{ x + 1 }}
         {% endfor %}
@@ -25,6 +26,7 @@ leaf_b:
 leaf_b_interface_a:
     type: dropdown
     options:
+        - "NULL"
         {% for x in range(20) %}
         - {{ x + 1 }}
         {% endfor %}
