--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Build the docker image
-      run: docker build . --file Dockerfile --tag ignw/dc_2020_aci_appliance_server:latest
+      run: docker build . --no-cache --file Dockerfile --tag ignw/dc_2020_aci_appliance_server:latest
 
   DryRun:
     runs-on: self-hosted
