--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -7,18 +7,13 @@ on:
 
 jobs:
 
-  Build:
+  Build and Run:
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v1
 
     - name: Build the docker image
       run: docker build . --no-cache --file Dockerfile --tag ignw/dc_2020_aci_appliance_server:latest
-
-  DryRun:
-    runs-on: self-hosted
-    steps:
-    - uses: actions/checkout@v1
 
     - name: Test the execution of the Playbook but don't make any changes
       env: # Get our password ready for use
