--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -7,18 +7,13 @@ on:
 
 jobs:
 
-  Build:
+  Build_and_Test:
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v1
 
     - name: Build the docker image
-      run: docker build . --file Dockerfile --tag ignw/dc_2020_aci_appliance_server:latest
-
-  DryRun:
-    runs-on: self-hosted
-    steps:
-    - uses: actions/checkout@v1
+      run: docker build . --file Dockerfile --tag ignw/dc_2020_aci_appliance_server_branch:latest
 
     - name: Test the execution of the Playbook but don't make any changes
-      run: docker run --rm ignw/dc_2020_aci_appliance_server:latest ansible-playbook -i inventory aci_appliance_server.yml -v --check --diff
+      run: docker run --rm ignw/dc_2020_aci_appliance_server_branch:latest ansible-playbook -i inventory aci_appliance_server.yml -v --check --diff
