--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -7,26 +7,13 @@ on:
 
 jobs:
 
-  Build:
+  Build_and_Deploy:
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v1
 
     - name: Build the docker image
-      run: docker build . --file Dockerfile --tag ignw/dc_2020_aci_appliance_server:latest
-
-  DryRun:
-    runs-on: self-hosted
-    steps:
-    - uses: actions/checkout@v1
-
-    - name: Test the execution of the Playbook but don't make any changes
-      run: docker run --rm ignw/dc_2020_aci_appliance_server:latest ansible-playbook -i inventory aci_appliance_server.yml -v --check --diff
-
-  Apply:
-    runs-on: self-hosted
-    steps:
-    - uses: actions/checkout@v1
+      run: docker build . --file Dockerfile --tag ignw/dc_2020_aci_appliance_server_production:latest
 
     - name: Run the playbook
-      run: docker run --rm ignw/dc_2020_aci_appliance_server:latest ansible-playbook -i inventory aci_appliance_server.yml -v
+      run: docker run --rm ignw/dc_2020_aci_appliance_server_production:latest ansible-playbook -i inventory aci_appliance_server.yml -v
