--- a/gui/ui.yml
+++ b/gui/ui.yml
@@ -38,9 +38,16 @@ attached_epg:
         - cybercorp_database
         - Icestone_management
         - Icestone_servers
+spacing:
+    type: paragraph
+    default: |
+        <br>
+        <br>
+        <h2>Authentication</h2>
+        <hr>
 github_username:
     type: text
-github_password:
+github_oauth_token:
     type: password 
 github_email_address:
     type: text
